--- a/assets/stylesheets/app.css
+++ b/assets/stylesheets/app.css
@@ -3,10 +3,11 @@
 	padding: 0;
 	border: 0;
 }
-body{
-	background-color: #ddd;
-}
+
 #wrapper{
-	width: 240px;
-	margin: 1em auto;
+  width: 240px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
